feat: inscripción de estudiantes a clases, asistencia y correcciones