@@ -1,20 +1,26 @@
 package com.skatingSchool.v1.adapter.out.persistence;
 
 import com.skatingSchool.v1.domain.model.Class;
+import com.skatingSchool.v1.domain.model.Student;
 import com.skatingSchool.v1.domain.port.CreateClassPort;
 import com.skatingSchool.v1.domain.port.FindClassPort;
+import com.skatingSchool.v1.domain.port.EnrollStudentPort;
 import com.skatingSchool.v1.infraestructure.persistence.entities.ClassEntity;
+import com.skatingSchool.v1.infraestructure.persistence.entities.StudentEntity;
 import com.skatingSchool.v1.infraestructure.persistence.mapper.ClassMapper;
 import com.skatingSchool.v1.infraestructure.persistence.repository.ClassRepository;
+
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Repository;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Service
-public class ClassAdapter implements CreateClassPort, FindClassPort {
+
+@Repository
+public class ClassAdapter implements CreateClassPort, FindClassPort, EnrollStudentPort {
 
     @Autowired
     private ClassRepository classRepository;
@@ -34,7 +40,8 @@ public class ClassAdapter implements CreateClassPort, FindClassPort {
 
     @Override
     public List<Class> findByInstructorId(Long instructorId) {
-        List<ClassEntity> entities =classRepository.findByInstructor_InstructorId(instructorId);
+        List<ClassEntity> entities =
+                classRepository.findByInstructor_InstructorId(instructorId);
 
         return entities.stream()
                 .map(ClassMapper::toDomain)
@@ -43,19 +50,65 @@ public class ClassAdapter implements CreateClassPort, FindClassPort {
 
     @Override
     public List<Class> findBySchedule(LocalDateTime schedule) {
-        List<ClassEntity> entities = classRepository.findBySchedule(schedule);
+        List<ClassEntity> entities =
+                classRepository.findBySchedule(schedule);
+
         return entities.stream()
                 .map(ClassMapper::toDomain)
                 .collect(Collectors.toList());
     }
 
-    //Sobre escritura del metodo findAllClasses
-    
     @Override
     public List<Class> findAllClasses() {
         return classRepository.findAll()
-            .stream()
-            .map(ClassMapper::toDomain)
-            .toList();
+                .stream()
+                .map(ClassMapper::toDomain)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Class> findClassesWithAvailableSpots() {
+        List<ClassEntity> entities = classRepository.findAll();
+
+        return entities.stream()
+                .filter(entity -> entity.getStudents() == null || entity.getStudents().size() < 20)
+                .map(ClassMapper::toDomain)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public void enrollStudent(Long classId, Student student) {
+        ClassEntity classEntity = classRepository.findById(classId)
+                .orElseThrow(() -> new RuntimeException("Clase no encontrada"));
+
+        StudentEntity studentEntity = new StudentEntity();
+        studentEntity.setStudentId(student.getStudentId());
+        studentEntity.setUserId(student.getUserId());
+        studentEntity.setActive(student.getActive());
+
+        if (classEntity.getStudents() == null) {
+            classEntity.setStudents(new ArrayList<>());
+        }
+
+        classEntity.getStudents().add(studentEntity);
+        classRepository.save(classEntity);
+    }
+
+    @Override
+    public boolean isStudentEnrolled(Long classId, Long studentId) {
+        return classRepository.findById(classId)
+                .map(entity -> entity.getStudents() != null &&
+                        entity.getStudents().stream()
+                                .anyMatch(s -> s.getStudentId().equals(studentId)))
+                .orElse(false);
+    }
+
+
+    @Override
+    public List<Class> findByStudentId(Long studentId) {
+        List<ClassEntity> entities = classRepository.findByStudents_StudentId(studentId);
+        return entities.stream()
+                .map(ClassMapper::toDomain)
+                .collect(Collectors.toList());
     }
 }
